--- a/EmployeeManager/Views/Employee/Home.cshtml
+++ b/EmployeeManager/Views/Employee/Home.cshtml
@@ -5,7 +5,7 @@
 
 @model DataLayer.Models.ViewModels.EmployeeHomeViewModel
 
-<div class="max-w-sm mx-auto">
+<div class="max-w-4xl mx-auto">
     <h5 class="inline-block mb-2 text-xl font-bold text-gray-900 dark:text-white">Employee details</h5>
     <div class="flow-root">
         <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
@@ -92,12 +92,10 @@
             </table>
         </div>
     </div>
-    <div class="flex justify-center">
-        <form action="/auth/signout" method="GET">
-            <button type="submit" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-red-600 border border-transparent rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
-                Sign Out
-            </button>
-        </form>
+    <div class="mt-4 flex justify-center">
+        <div>
+            <a href="/auth/signout" class="inline-flex items-center px-4 py-2 text-sm font-medium text-black bg-white border-2 border-blue-300 rounded-md hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-100">Sign Out</a>
+        </div>
     </div>
 
 </div>
