--- a/EmployeeManager/Views/Manager/Home.cshtml
+++ b/EmployeeManager/Views/Manager/Home.cshtml
@@ -5,7 +5,7 @@
 
 @model DataLayer.Models.ViewModels.ManagerHomeViewModel
 
-<div class="max-w-sm mx-auto">
+<div class="max-w-4xl mx-auto">
     <h5 class="inline-block mb-2 text-xl font-bold text-gray-900 dark:text-white">Manager details</h5>
     <div class="flow-root">
         <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
@@ -37,7 +37,7 @@
 
 
         <div class="mt-4 relative overflow-x-auto">
-            <h5 class="inline-block mb-2 text-xl font-bold text-gray-900 dark:text-white">Rewards</h5>
+            <h5 class="inline-block mb-2 text-xl font-bold text-gray-900 dark:text-white">Employees</h5>
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
@@ -67,17 +67,10 @@
                                     @employee.Position.Title
                                 </td>
                                 <td class="px-6 py-4">
-                                    <a href="/manager/give-reward/" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-yellow-600 border border-transparent rounded-md hover:bg-yellow-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500">Reward</a>
+                                    <a href="/manager/GiveReward/" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-yellow-300 border border-transparent rounded-md hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-200">Reward</a>
                                 </td>
                                 <td class="px-6 py-4">
-                                    <button type="submit" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                                        Edit
-                                    </button>
-                                </td>
-                                <td class="px-6 py-4">
-                                    <button type="submit" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-red-600 border border-transparent rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
-                                        Delete
-                                    </button>
+                                    <a href="/manager/DeleteEmployee/@employee.EmployeeId" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-red-600 border border-transparent rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">Delete</a>
                                 </td>
                             </tr>
                         }
@@ -86,15 +79,11 @@
             </table>
         </div>
     </div>
-    <div class="flex justify-center">
-        <form action="/auth/signout" method="GET">
-            <button type="submit" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-red-600 border border-transparent rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
-                Sign Out
-            </button>
-            <button type="submit" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                New employee
-            </button>
-        </form>
+    <div class="mt-4 flex justify-center">
+        <div>
+            <a href="/manager/createemployee" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">New employee</a>
+            <a href="/auth/signout" class="inline-flex items-center px-4 py-2 text-sm font-medium text-black bg-white border-2 border-blue-300 rounded-md hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-100">Sign Out</a>
+        </div>
     </div>
 
 </div>
