--- a/EmployeeManager/Views/Manager/Home.cshtml
+++ b/EmployeeManager/Views/Manager/Home.cshtml
@@ -5,7 +5,29 @@
 
 @model DataLayer.Models.ViewModels.ManagerHomeViewModel
 
-<div class="max-w-4xl mx-auto">
+
+<nav class="bg-white border-gray-200 dark:bg-gray-900">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 bg-gray-100">
+        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+            <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                <li>
+                    <a href="/manager/home" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+                </li>
+                <li>
+                    <a href="/manager/createemployee" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">New employee</a>
+                </li>
+                <li>
+                    <a href="/manager/positions" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Positions</a>
+                </li>
+                <li>
+                    <a href="/auth/signout" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Sign out</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="max-w-4xl mx-auto mt-4">
     <h5 class="inline-block mb-2 text-xl font-bold text-gray-900 dark:text-white">Manager details</h5>
     <div class="flow-root">
         <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
@@ -56,7 +78,7 @@
                         <th scope="col" class="px-6 py-3">
                             Latest reward date
                         </th>
-                        <th scope="col" colspan="4" class="px-6 py-3">
+                        <th scope="col" class="px-6 py-3 text-center">
                             Operation
                         </th>
                     </tr>
@@ -65,58 +87,51 @@
                     @{
                         foreach (var row in Model.EmployeesWithRewards)
                         {
-                                        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
-                                            <td class="px-6 py-4">
-                                                @row.Employee.User.FirstName @row.Employee.User.LastName
-                                            </td>
-                                            <td class="px-6 py-4">
-                                                @row.Employee.HiringDate
-                                            </td>
-                                            <td class="px-6 py-4">
-                                                @row.Employee.Position.Title
-                                            </td>
-                                            @{
-                                                double amount = 0;
-                                                if (row.RewardHistory != null)
-                                                {
-                                                    amount = row.RewardHistory.Rate * row.RewardHistory.Count;
-                                                    <td class="px-6 py-4">
-                                                        @amount
-                                                    </td>
-                                                    <td class="px-6 py-4">
-                                                        @row.RewardHistory.CreatedAt
-                                                    </td>
-                                                }
-                                                else
-                                                {
-                                                    <td class="px-6 py-4">
-                                                        --
-                                                    </td>
-                                                    <td class="px-6 py-4">
-                                                        --
-                                                    </td>
-                                                }
-                                            }
+                            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                                <td class="px-6 py-4">
+                                    @row.Employee.User.FirstName @row.Employee.User.LastName
+                                </td>
+                                <td class="px-6 py-4">
+                                    @row.Employee.HiringDate
+                                </td>
+                                <td class="px-6 py-4">
+                                    @row.Employee.Position.Title
+                                </td>
+                                @{
+                                    double amount = 0;
+                                    if (row.RewardHistory != null)
+                                    {
+                                        amount = row.RewardHistory.Rate * row.RewardHistory.Count;
+                                        <td class="px-6 py-4">
+                                            @amount
+                                        </td>
+                                        <td class="px-6 py-4">
+                                            @row.RewardHistory.CreatedAt
+                                        </td>
+                                    }
+                                    else
+                                    {
+                                        <td class="px-6 py-4">
+                                            --
+                                        </td>
+                                        <td class="px-6 py-4">
+                                            --
+                                        </td>
+                                    }
+                                }
 
-                                            <td class="">
-                                                <a href="/manager/AddReward?empId=@row.Employee.EmployeeId" class="inline items-center px-4 py-2 text-sm font-medium text-white bg-yellow-300 border border-transparent rounded-md hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-200">Reward</a>
+                                <td class="px-6 py-4 flex">
+                                    <a href="/manager/AddReward?empId=@row.Employee.EmployeeId" class=" inline items-center px-4 py-2 text-sm font-medium text-white bg-yellow-300 border border-transparent rounded-md hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-200">Reward</a>
 
-                                                <a href="/manager/EditEmployee?empId=@row.Employee.EmployeeId" class="inline items-center px-4 py-2 text-sm font-medium text-white bg-green-300 border border-transparent rounded-md hover:bg-green-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-200">Edit</a>
+                                    <a href="/manager/EditEmployee?empId=@row.Employee.EmployeeId" class="ml-2 inline items-center px-4 py-2 text-sm font-medium text-white bg-green-300 border border-transparent rounded-md hover:bg-green-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-200">Edit</a>
 
-                                                <a href="/manager/DeleteEmployee/@row.Employee.EmployeeId" class="inline items-center px-4 py-2 text-sm font-medium text-white bg-red-600 border border-transparent rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">Delete</a>
-                                            </td>
-                                        </tr>
+                                    <a href="/manager/DeleteEmployee/@row.Employee.EmployeeId" class="ml-2 inline items-center px-4 py-2 text-sm font-medium text-white bg-red-600 border border-transparent rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">Delete</a>
+                                </td>
+                            </tr>
                         }
                     }
                 </tbody>
             </table>
         </div>
     </div>
-    <div class="mt-4 flex justify-center">
-        <div>
-            <a href="/manager/createemployee" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">New employee</a>
-            <a href="/auth/signout" class="inline-flex items-center px-4 py-2 text-sm font-medium text-black bg-white border-2 border-blue-300 rounded-md hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-100">Sign Out</a>
-        </div>
-    </div>
-
 </div>
